Bug 1158251 - Fix sub-session histograms double-counting measurements the first time. r=gfritzsche